# RadMud

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  README.md  index.html  params.json
.github/: copilot-instructions.md
db_editor/: .gitignore  README.md  custom_logger.py  radmuddbe.py  radmuddbe.ui
doc/: Doxygen.css  Doxygen.xml  RadMud.doxyfile  RadMudEditor.xlsx  SkillBenefitManager.xlsx
include/: mud.hpp
src/: actions.cpp  actions.hpp  area.cpp  area.hpp  building.cpp  building.hpp  character.cpp  character.hpp  (+67 more)
src/action/: CMakeLists.txt  aimAction.cpp  aimAction.hpp  buildAction.cpp  buildAction.hpp  combatAction.cpp  combatAction.hpp  craftAction.cpp  craftAction.hpp  generalAction.cpp  generalAction.hpp  loadAction.cpp  loadAction.hpp  moveAction.cpp  moveAction.hpp  reloadAction.cpp  reloadAction.hpp  scoutAction.cpp  scoutAction.hpp  unloadAction.cpp  unloadAction.hpp
src/action/combat/: CMakeLists.txt  basicAttack.cpp  basicAttack.hpp  basicMeleeAttack.cpp  basicMeleeAttack.hpp  basicRangedAttack.cpp  basicRangedAttack.hpp  chase.cpp  chase.hpp  combatAction.cpp  combatAction.hpp  flee.cpp  flee.hpp
src/action/object/: CMakeLists.txt  dismemberAction.cpp  dismemberAction.hpp
src/character/: CMakeLists.txt  aggression.cpp  aggression.hpp  aggressionList.cpp  aggressionList.hpp  bodyPart.cpp  bodyPart.hpp  character.cpp  character.hpp  characterContainer.cpp  characterContainer.hpp  characterUtilities.cpp  characterUtilities.hpp  characterVector.cpp  characterVector.hpp  combatHandler.cpp  combatHandler.hpp  effect.cpp  effect.hpp  effectFactory.cpp  effectFactory.hpp  effectList.cpp  effectList.hpp  faction.cpp  faction.hpp  mobile.cpp  mobile.hpp  mobileModel.cpp  mobileModel.hpp  opponent.hpp  player.cpp  player.hpp  race.cpp  race.hpp  skill.cpp  skill.hpp
src/character/behaviour/: generalBehaviour.hpp
src/character/effect/: CMakeLists.txt  effect.cpp  effect.hpp  effectFactory.cpp  effectFactory.hpp  effectManager.cpp  effectManager.hpp  modifierManager.hpp
src/character/effects/: CMakeLists.txt  combatEffects.cpp  combatEffects.hpp  effect.cpp  effect.hpp  effectFactory.cpp  effectFactory.hpp  effectList.cpp  effectList.hpp
src/character/modifier/: CMakeLists.txt  abilityModifier.cpp  combatModifier.cpp  combatModifier.hpp  statusModifier.cpp  statusModifier.hpp
src/character/modifiers/: CMakeLists.txt  abilityModifier.hpp  knowledge.cpp  knowledge.hpp
src/character/race/: CMakeLists.txt  race.cpp  race.hpp
src/character/skill/: CMakeLists.txt  skill.cpp  skill.hpp  skillData.cpp  skillData.hpp  skillManager.cpp  skillManager.hpp
src/command/: CMakeLists.txt  argument.cpp  argument.hpp  argumentHandler.cpp  argumentHandler.hpp  combat.cpp  combat.hpp  command.cpp  command.hpp  communication.cpp  communication.hpp  crafting.cpp  crafting.hpp  gathering.cpp  general.cpp  general.hpp  god.cpp  god.hpp  inputHandler.cpp  inputHandler.hpp  manager.cpp  manager.hpp  movement.cpp  movement.hpp  object.cpp  object.hpp  processInput.hpp  processTelnetCommand.cpp  processTelnetCommand.hpp  protocol.cpp  protocol.hpp
src/command/creation/: creationStep.cpp  creationStep.hpp  processInitialization.cpp  processInitialization.hpp  processNewAge.cpp  processNewAge.hpp  processNewAttributes.cpp  processNewAttributes.hpp  processNewConfirm.cpp  processNewConfirm.hpp  processNewDescription.cpp  processNewDescription.hpp  processNewGender.cpp  processNewGender.hpp  processNewName.cpp  processNewName.hpp  processNewPassword.cpp  processNewPassword.hpp  processNewPasswordConfirm.cpp  processNewPasswordConfirm.hpp  processNewRace.cpp  processNewRace.hpp  processNewStory.cpp  processNewStory.hpp  processNewWeight.cpp  processNewWeight.hpp  processPlayerName.cpp  processPlayerName.hpp  processPlayerPassword.cpp  processPlayerPassword.hpp
src/command/god/: CMakeLists.txt  commandGod.cpp  commandGod.hpp  commandGodCharacter.cpp  commandGodCharacter.hpp  commandGodCreation.cpp  commandGodCreation.hpp  commandGodItem.cpp  commandGodItem.hpp  commandGodLiquid.cpp  commandGodLiquid.hpp  commandGodMobile.cpp  commandGodMobile.hpp  commandGodMud.cpp  commandGodMud.hpp  commandGodStructure.cpp  commandGodStructure.hpp
src/command/object/: CMakeLists.txt  commandObject.cpp  commandObject.hpp  commandObjectCharacter.cpp  commandObjectCharacter.hpp  commandObjectContainer.cpp  commandObjectContainer.hpp  commandObjectFood.cpp  commandObjectFood.hpp  commandObjectLightSource.cpp  commandObjectLightSource.hpp  commandObjectLiquids.cpp  commandObjectLiquids.hpp  commandObjectManagement.cpp  commandObjectManagement.hpp  commandObjectProcess.cpp  commandObjectProcess.hpp  commandObjectShop.cpp  commandObjectShop.hpp
src/structure/: CMakeLists.txt  area.cpp  area.hpp  continent.cpp  continent.hpp  coordinates.cpp  coordinates.hpp  exit.cpp  exit.hpp  generator.cpp  generator.hpp  room.cpp  room.hpp  roomFactory.cpp  roomFactory.hpp  roomUtilityFunctions.cpp  roomUtilityFunctions.hpp  structureDefines.hpp  structureUtils.cpp  structureUtils.hpp  terrain.cpp  terrain.hpp
src/structure/algorithms/: CMakeLists.txt  aStar.cpp  aStar.hpp  aStar.i.hpp  aStarNode.cpp  aStarNode.hpp  aStarNode.i.hpp  graphNode.cpp  graphNode.hpp  pathFinder.cpp  pathFinder.hpp  pathFinderNode.hpp
src/structure/algorithms/AStar/: aStar.hpp  aStar.i.hpp  aStarNode.cpp  aStarNode.hpp  aStarNode.i.hpp
src/structure/map_generation/: CMakeLists.txt  heightMap.cpp  heightMap.hpp  heightMapper.cpp  heightMapper.hpp  mapCell.cpp  mapCell.hpp  mapConfiguration.cpp  mapConfiguration.hpp  mapGenerator.cpp  mapGenerator.hpp  mapGeneratorConfiguration.cpp  mapGeneratorConfiguration.hpp  mapRoom.hpp  mapTile.hpp  mapWrapper.cpp  mapWrapper.hpp  tile.hpp
src/structure/map_generation/surface/: surfaceGenerator.cpp  surfaceGenerator.hpp
src/structure/map_generation/underground/: mapRoom.hpp  undergroundGenerator.cpp  undergroundGenerator.hpp
src/structure/terrain/: CMakeLists.txt  terrain.cpp  terrain.hpp  terrainFactory.cpp  terrainFactory.hpp
(+626 files in other folders)
